improved design of question 9_a

--- a/Question9_a.html
+++ b/Question9_a.html
@@ -26,9 +26,16 @@
       for (var i = 0; i < imgarr.length; i++) {
         let elem = document.createElement("img");
         elem.setAttribute("src", `images/${imgarr[i]}`);
-        elem.setAttribute("height", "700");
-        elem.setAttribute("width", "1024");
+        elem.setAttribute("height", "300");
+        elem.setAttribute("width", "504");
+        elem.style.marginRight = "20px"
+        elem.style.marginBottom = "20px"
         element.appendChild(elem);
+        if(i%2 == 1) {
+          element.appendChild(
+            document.createElement('br')
+          );
+        }
       }
     </script>
   </body>
