--- a/Question9_a.html
+++ b/Question9_a.html
@@ -6,6 +6,7 @@
     <title>Image Gallery</title>
   </head>
   <body style="background-color: black;">
+    <h1 style="text-align: center; color: white;">Create an image galery using Javascript</h1>
     <div id="imggallery"></div>
     <script>
       let imgarr = new Array(
